<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="ultimate_jutsus_5_star">Ultimate Jutsus 5 Star</string>
    <string name="jutsus_4_star">Jutsus 4 Star</string>
    <string name="jutsus_3_star">Jutsus 3 Star</string>
    <string name="jutsus_1_star">Jutsus 1 Star</string>
    <string name="tools_5_star">Tools 5 Star</string>
    <string name="tools_factory_5_star">Tools Factory 5 Star</string>
    <string name="ninjutsu">Ninjutsu</string>
    <string name="max_card_stats">Max Card Stats</string>
    <string name="attack">Attack</string>
    <string name="lv_70_70">70/70</string>
    <string name="hp">HP</string>
    <string name="_1128">1128</string>
    <string name="cp">CP</string>
    <string name="_102">102</string>
    <string name="atk">ATK</string>
    <string name="_829">829</string>
    <string name="def">DEF</string>
    <string name="_534">534</string>
    <string name="cri">CRI</string>
    <string name="_1_30">1.30%</string>
    <string name="max_jutsu_stats">Max Jutsu Stats</string>
    <string name="eva">EVA</string>
    <string name="rasengan">Rasengan</string>
    <string name="release">Release</string>
    <string name="lvl">LVL</string>
    <string name="_8_8">8/8</string>
    <string name="_300">300</string>
    <string name="_36_00">36.00%</string>
    <string name="pow">POW</string>
    <string name="_9320">9320</string>
    <string name="_60">60</string>
    <string name="equippable_by">Equippable By</string>
    <string name="naruto_uzumaki">Naruto Uzumaki</string>
    <string name="charges_ahead_and_strikes_with_rasengan_blows_enemies_back_and_causes_a_large_amount_of_damage">Charges ahead and strikes with Rasengan. Blows enemies back and causes a large amount of damage.</string>
    <string name="impact">Impact</string>
    <string name="_350">350</string>
    <string name="_9820">9820</string>
    <string name="_53">53</string>
    <string name="a_swarm_of_naruto_shadow_clones_pummel_the_enemy_causing_a_huge_amount_of_damage">A swarm of Naruto shadow clones pummel the enemy causing a huge amount of damage.</string>
    <string name="naruto_uzumaki_2k_barrage">Naruto Uzumaki 2K Barrage</string>
    <string name="wild_rampaging_blast">Wild Rampaging Blast</string>
    <string name="_250">250</string>
    <string name="_5100">5100</string>
    <string name="sends_out_a_shock_wave_causing_a_medium_amount_of_damage_and_inflicting_damage_over_time_effect_medium_also_increases_user_s_attack_power_and_critical_hit_rate_effect_large">Sends out a shock wave, causing a medium amount of damage and inflicting damage over time [Effect: Medium], Also increases user\'s attack power and critical hit rate [Effect: Large].</string>
    <string name="ultimate_jutsu">Ultimate Jutsu</string>
    <string name="check_by_lv">Check By Lv</string>
    <string name="lv_1">Lv 1</string>
    <string name="lv_2">Lv 2</string>
    <string name="lv_3">Lv 3</string>
    <string name="lv_4">Lv 4</string>
    <string name="lv_5">Lv 5</string>
    <string name="lv_6">Lv 6</string>
    <string name="lv_7">Lv 7</string>
    <string name="lv_8">Lv 8</string>
    <string name="cp_cost">CP Cost</string>
    <string name="rotates_a_shadow_clone_blowing_away_surrounding_enemies_and_causing_damage">Rotates a shadow clone, blowing away surrounding enemies and causing damage.</string>
    <string name="a_crowd_of_naruto_shadow_clones_all_perform_the_sexy_jutsu_inflicting_paralysis_effect_medium">A crowd of Naruto shadow clones all perform the Sexy Jutsu, inflicting paralysis [Effect: Medium].</string>
    <string name="sends_a_shadow_clone_of_naruto_speeding_ahead_causing_damage_and_setting_off_traps">Sends a shadow clone of Naruto speeding ahead, causing damage and setting off traps.</string>
    <string name="shadow_clone_jutsu">Shadow Clone Jutsu</string>
    <string name="harem_jutsu">Harem Jutsu</string>
    <string name="clone_spin">Clone Spin</string>
    <string name="wild_claw">Wild Claw</string>
    <string name="uses_nine_tails_chakra_arms_to_deal_damage_and_decrease_the_enemies_defense_effect_small_increases_the_user_s_movement_speed_effect_large">Uses Nine Tails Chakra arms to deal damage and decrease the enemies\' defense [Effect: Small], Increases the user\'s movement speed [Effect: Large].</string>
    <string name="clone_arrow">Clone Arrow</string>
    <string name="hurls_a_shadow_clone_ahead_causing_damage">Hurls a shadow clone ahead, causing damage.</string>
    <string name="shadow_clone_uppercut">Shadow Clone Uppercut</string>
    <string name="forms_a_shadow_clone_ahead_that_performs_an_uppercut_causing_damage">Forms a shadow clone ahead that performs an uppercut, causing damage.</string>
    <string name="assist">Assist</string>
    <string name="defense">Defense</string>
    <string name="skill">Skill</string>
    <string name="utility">Utility</string>
    <string name="show_all">Show All</string>
</resources>